tests/test_concolic/bad/context_conflict_on_reentrant.catala_en
## Article

```catala
declaration scope A:
    context output x content integer
    output o content integer

scope A:
    definition x equals -1
    definition o equals 10
    definition o under condition x>0 consequence equals 20
```

When a value is forced for x, we are able to find the conflict. When its
default value is used there is no conflict.

For now it is not very clear what is happening because we can't see the value
of `<function>`.

```catala-test-inline
$ catala Concolic -s A
[RESULT] 
[RESULT] Evaluating with inputs:
[RESULT] . x_in = <function>
[RESULT] Output of scope after evaluation:
[RESULT]
Found error ↯Conflict(tests/test_concolic/bad/context_conflict_on_reentrant.catala_en:11.57-11.59,tests/test_concolic/bad/context_conflict_on_reentrant.catala_en:10.25-10.27,)↯
[RESULT] 
[RESULT] Evaluating with inputs:
[RESULT] . x_in = <function>
[RESULT] Output of scope after evaluation:
[RESULT] . o = 10
[RESULT] . x = 0
[RESULT] 
[RESULT] Evaluating with inputs:
[RESULT] . x_in = <function>
[RESULT] Output of scope after evaluation:
[RESULT] . o = 10
[RESULT] . x = -1
[RESULT] 
[RESULT] Concolic interpreter done
[RESULT] Computation successful!
```

